Update project dependencies and minor tweaks